# CodingLife

20211220/: README.md
20211220/algorithm/: future_city.py  future_city_with_dijkstra.py  telegram.py
20211227/algorithm/: four_directions.py  game_development.py  knight.py  time.py
20211228/algorithm/: reverse_string.py
20211231/: README.md  take_item.py
20220101/algorithm/: README.md  representation_as_n.py
20220101/code complete 2nd/: 28장 구현관리.md  29장 통합.md  30장 프로그래밍 도구.md
20220102/algorithm/: README.md  immigration.py
20220103/algorithm/: README.md  interger_triangle.py
20220103/자바 ORM 표준 JPA 프로그래밍/: JPA 소개.md
20220104/algorithm/: README.md  toothbrush_sales.py
20220104/자바 ORM 표준 JPA 프로그래밍/: README.md
20220106/algorithm/: README.md  transfer_gold_and_silver.py
20220107/algorithm/: README.md  lotto_priority.py
20220108/algorithm/: README.md  recommand_new_id.py
20220109/algorithm/: README.md  numbers_and_words.py
20220110/algorithm/: README.md  string_compression.py
20220111/algorithm/: README.md  open_chat.py
20220112/algorithm/: README.md  good_rectangle.py
20220113/algorithm/: 124_nation.py  README.md
20220114/algorithm/: README.md  remove_pair.py
20220118/html-to-pdf/: .gitignore  Dockerfile  README.md  docker-compose.yml  html_example.html  main.py  requirements.txt
20220118/html_manipulator/: .gitignore  README.md  manipulated.html  requirements.txt  template.html  (+1 more)
20220415/localstack-getting-started/: .gitignore  pyproject.toml
20220415/localstack-getting-started/tests/: test_localstack_getting_started.py
(+28 files in other folders)
